Create an instance of GameManager and output content
- Import image/texture using MonoGame Content Builder
- Load the texture
- Create an instance of GameManager class and pass the texture into the object
- Use the GameManager's Update and Draw methods to display tiles

--- a/FindPath/FindPath.csproj
+++ b/FindPath/FindPath.csproj
@@ -20,4 +20,9 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Content\tile.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
